--- a/css/lily.css
+++ b/css/lily.css
@@ -1,3 +1,11 @@
+body {
+    background-color: greenyellow;
+}
+
 .bg-lily-green {
     background-color: greenyellow;
+}
+
+.text-white {
+    color: antiquewhite;
 }
