--- a/css/lily.css
+++ b/css/lily.css
@@ -4,12 +4,9 @@
 }
 
 body {
-    font-family: 'josefin-sans', Fallback, sans-serif;;
+    font-family: 'josefin-sans', Fallback, sans-serif;
     background-color: greenyellow;
-}
-
-.bg-lily-green {
-    background-color: greenyellow;
+    background-image: radial-gradient(circle, #ffffff, #f068f0, #f068f0)!important;
 }
 
 .text-white {
@@ -17,5 +14,13 @@ body {
 }
 
 .border-pink {
-    box-shadow: 5px 5px 90px 45px #ff00ff;
+    box-shadow: 5px 5px 90px 45px #f068f0;
+}
+
+.bg-pink {
+    background-color: #f068f0;
+}
+
+.bg-pink-gradient {
+    background-image: radial-gradient(circle, #, #f068f0, #f068f0)!important;
 }
