--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,3 +1,8 @@
+/*
+@import '~bootstrap/scss/bootstrap';
+*/
+
+
 @font-face {
   font-family: 'amiko-regular';
   src: url('/Amiko-Regular.ttf')  format('truetype')
@@ -13,14 +18,45 @@ $crimson: #dc143c;
 $brand_black: #1e1e34;
 
 
+// Brand Colors
+$yellow: #F4C433;
+$blue: #26618D;
+$sand: #FAF4D9;
+
+
+
+$body-bg: $yellow;
+$body-color: $yellow;
+//$body-color: #111;
+
+
 body {
   font-family: 'amiko-regular', Fallback, sans-serif;
-  background-color: white;
-  //background-image: radial-gradient(circle, #ffffff, #f068f0, #f068f0)!important;
-  color: $brand_black;
+  background-color: $yellow;
+}
+
+.bg-blue {
+  background-color: $blue;
+}
+
+.navbar-dark .navbar-toggler {
+  border: none;
+}
+
+.navbar-dark .navbar-toggler-icon {
+  color: $sand;
+  background-image: url('/hamburger.svg')
+
+}
+
+.drop-shadow {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 h1 {
-  font-family: 'amiko-bold', Fallback, sans-serif;
-  color: $brand_black;
+  color: $blue;
+}
+
+.nav-item a {
+  color: $sand
 }
